<resources>
	<string name="app_name">Voice Notify</string>
	<string name="back">Back</string>
	<string name="app_overrides">%s Overrides</string>
	<string name="service_running">Voice Notify service is running</string>
	<string name="service_suspended">Voice Notify service is suspended</string>
	<string name="permission_rationale_read_phone_state">The phone calls permission is required to prevent Voice Notify from speaking during a call.</string>
	<string name="permission_rationale_post_notifications">The post notifications permission is required for Voice Notify to post a test notification.</string>
	<string name="autostart_message">For Voice Notify to work reliably on this device, it must be allowed to autostart or run in the background.</string>
	<string name="autostart_message_direct">\n\nPress %s to go to the relevant settings screen and enable Voice Notify if it isn\'t already.</string>
	<string name="autostart_message_direct_failed">Failed to open the relevant settings screen</string>
	<string name="autostart_message_manual">\n\nSearch in Android Settings for \'autostart\', \'auto-launch\', \'startup\', \'background\', or \'never sleep\' and enable Voice Notify if it isn\'t already.\n\nThe setting has different names depending on the OS. If you are unable to find it, please contact the developer.\n\nPress %s to open Android Settings.</string>
	<string name="dont_show_again">Don\'t show again</string>
	<string name="service_disabled">Voice Notify service is disabled</string>
	<string name="status_summary_notification_access_enabled">Tap to suspend Voice Notify.\nLong press to open the Android notification access settings to disable the service.</string>
	<string name="status_summary_notification_access_disabled">Tap to open the Android notification access settings to enable the service.</string>
	<string name="status_summary_suspended">Tap to activate Voice Notify.\nLong press to open the Android notification access settings to disable the service.</string>
	<string name="app_list">App List</string>
	<string name="app_list_summary">Select apps to enable and override settings per app</string>
	<string name="tts">Text-To-Speech</string>
	<string name="tts_summary">Configure Text-To-Speech behavior</string>
	<string name="audio_focus">Pause/dim media</string>
	<string name="audio_focus_summary">Request other media to pause/dim when speaking</string>
	<string name="shake_to_silence">Shake-To-Silence</string>
	<string name="shake_to_silence_summary">Adjust the sensitivity threshold of Shake-To-Silence</string>
	<string name="shake_to_silence_dialog_msg">Lower values are more sensitive.\n\nDefault: %1$d\nBlank or 0 to disable.\n\nRealtime shake value: %2$d\nPeak (5 seconds): %3$d</string>
	<string name="stream_media">Media</string>
	<string name="stream_notification">Notification</string>
	<string name="stream_voice">Voice</string>
	<string name="stream_ring">Ring</string>
	<string name="stream_alarm">Alarm</string>
	<string name="require_strings">Require Text</string>
	<string name="require_strings_summary">Only speak notifications that contain certain text in the message</string>
	<string name="ignore_strings">Ignore Text</string>
	<string name="ignore_strings_summary">Ignore notifications that contain certain text in the message</string>
	<string name="require_ignore_strings_dialog_msg">This is matched against the message sent to TTS, after TTS Message formatting and Text Replacement, including punctuation.\n\nSeparate individual entries with a new line.\nThe message needs to contain any entry, not all, to be a match.\nCase insensitive.</string>
	<string name="ignore_empty">Ignore Empty</string>
	<string name="ignore_empty_summary_on">Notifications without a message will not be spoken</string>
	<string name="ignore_empty_summary_off">Notifications without a message will be spoken as \"Notification from [app name].\"</string>
	<string name="ignore_groups">Ignore Group Messages</string>
	<string name="ignore_groups_summary_on">Notifications containing multiple messages will not be spoken</string>
	<string name="ignore_groups_summary_off">Notifications containing multiple messages will be spoken</string>
	<string name="ignore_repeat">Ignore Repeats</string>
	<string name="ignore_repeat_summary">Ignore subsequent identical notifications within a set time</string>
	<string name="ignore_repeat_dialog_msg">Set the number of seconds that must pass for a repeated notification to be spoken.\nIgnored repeats reset the count.\n\nRepeat detection is limited to the memory of the Notification Log (%d notifications).\n\n0 = Disable\nBlank = Infinite</string>
	<string name="device_state">Device States</string>
	<string name="device_state_summary">Select whether to speak during certain device states</string>
	<string name="device_state_dialog_title">Speak during these device states</string>
	<string name="device_state_screen_off">Screen Off</string>
	<string name="device_state_screen_on">Screen On</string>
	<string name="device_state_headset_off">Headset Off</string>
	<string name="device_state_headset_on">Headset On</string>
	<string name="device_state_silent_vibrate">Silent/Vibrate</string>
	<string name="device_state_in_call">In Call</string>
	<string name="quiet_start">Quiet Time Start</string>
	<string name="quiet_start_summary">Don\'t speak after this time.\nLeave the same as end to disable.</string>
	<string name="quiet_end">Quiet Time End</string>
	<string name="quiet_end_summary">Don\'t speak before this time.\nLeave the same as start to disable.</string>
	<string name="test">Test</string>
	<string name="test_summary">Post a notification (delayed 5 seconds) to test current settings</string>
	<string name="test_ignored">Voice Notify is ignored in App List.\nTest will run, but notification will not be spoken.</string>
	<string name="notification_channel_desc">Used for test notification</string>
	<string name="test_ticker">This is the ticker message</string>
	<string name="test_subtext">The Subtext</string>
	<string name="test_content_title">Content Title</string>
	<string name="test_content_text">This is the content message. 🙂</string>
	<string name="test_content_info">Content Info</string>
	<string name="test_big_content_title">Big Content Title</string>
	<string name="test_big_content_summary">This is the big content summary</string>
	<string name="test_big_content_text">This is the big content text.</string>
	<string name="test_text_lines">This is a line of text.\nThis is another line of text.</string>
	<string name="notify_log">Notification Log</string>
	<string name="notify_log_summary">List last %d notifications.\nDisplays time, app name, message, and ignore reasons.</string>
	<string name="notify_log_settings">Notification Log Settings</string>
	<string name="log_ignored_desc"><![CDATA[<b>Hide</b> &ndash; Notifications are hidden in the log and can be shown later, but count against the log limit.<br><br><b>Do not log</b> &ndash; Notifications are not logged and do not count against the log limit, but cannot be shown later. Notifications logged prior to setting this are hidden.]]></string>
	<string name="show_ignored">Show ignored %s</string>
	<string name="hide_ignored">Hide ignored %s</string>
	<string name="do_not_log_ignored">Do not log ignored %s</string>
	<string name="notifications">notifications</string>
	<string name="apps">apps</string>
	<string name="notification_details">Notification Details</string>
	<string name="enable">Enable</string>
	<string name="ticker">Ticker</string>
	<string name="subtext">Subtext</string>
	<string name="title">Title</string>
	<string name="content_text">Content Text</string>
	<string name="content_info_text">Content Info Text</string>
	<string name="big_content_summary">Big Content Summary</string>
	<string name="big_content_title">Big Content Title</string>
	<string name="big_content_text">Big Content Text</string>
	<string name="text_lines">Text Lines</string>
	<string name="flags">Flags</string>
	<string name="ignored_reasons">Ignored Reasons</string>
	<string name="interrupted_reason">Interrupted Reason</string>
	<string name="metadata">Metadata</string>
	<string name="metadata_id">ID: %d</string>
	<string name="metadata_category">Category: %s</string>
	<string name="metadata_progress">Progress: %1$d / %2$d</string>
	<string name="metadata_progress_indeterminate">Progress: Indeterminate</string>
	<string name="ignore_app">Ignore %s?</string>
	<string name="unignore_app">Enable %s?</string>
	<string name="yes">Yes</string>
	<string name="backup_restore">Backup / Restore</string>
	<string name="backup_restore_summary">Backup or restore all Voice Notify settings</string>
	<string name="backup_restore_message">Backup or restore a zip file containing all settings.\n\nBackups are only guaranteed to be compatible with the same version or later of Voice Notify.\nThere is no guarantee for backups from a beta or non-release build.</string>
	<string name="backup_settings">Backup Settings</string>
	<string name="restore_settings">Restore Settings</string>
	<string name="support">Help &amp; Support</string>
	<string name="support_summary">Rate &amp; review, email the developer, community chat, translations, source code, issue tracker, privacy policy</string>
	<string name="support_rate">Rate &amp; Review</string>
	<string name="support_rate_subtext">View the app on Play Store</string>
	<string name="support_email">Email Developer</string>
	<string name="support_email_subtext">General feedback or send debug files</string>
	<string name="support_email_dialog_title">Select attachments</string>
	<string name="support_email_dialog_message">These are only recommended when reporting bugs and crashes.</string>
	<string name="tts_settings">TTS Settings</string>
	<string name="tts_settings_summary">Open the Android Text-To-Speech settings</string>
	<string name="tts_message">TTS Message</string>
	<string name="tts_message_summary">Customize which parts of notifications are spoken</string>
	<string name="tts_message_dialog">#A = App title\n#T = Ticker\n#S = Subtext\n#C = Content title\n#M = Content message\n#I = Content info\n#H = Big content title\n#Y = Big content summary\n#B = Big content text\n#L = Text lines\nCase insensitive\n\nDefault:\n%1$s\n\nOld default (v1.1.0 - v1.3.0):\n#A. #C. #M.\n\nOld default (v1.0.x):\n#A: #T</string>
	<string name="tts_text_replace">TTS Text Replacement</string>
	<string name="tts_text_replace_summary">Substitute text to be spoken, such as to fix pronunciation</string>
	<string name="tts_text_replace_dialog">Substitute text to be spoken, allowing you to customize how Text-To-Speech pronounces words or replace text with any other text.\n\nThis is case insensitive and each replacement applies sequentially top to bottom, after TTS Message formatting and before emoji removal.</string>
	<string name="max_length">Max Length</string>
	<string name="max_length_summary">Maximum message length to speak</string>
	<string name="max_length_dialog_msg">Maximum message length to speak.\nLonger messages will be truncated.\n\nBlank or 0 for unlimited.\nAndroid TTS has a separate length limit (%d) that always applies.</string>
	<string name="tts_stream">TTS Audio Stream</string>
	<string name="tts_stream_summary">Choose the audio stream that Text-To-Speech plays through</string>
	<string name="tts_delay">TTS Delay</string>
	<string name="tts_delay_summary">Delay TTS a set number of seconds after notification</string>
	<string name="tts_delay_dialog_msg">Number of seconds to wait after notification before speaking.</string>
	<string name="tts_repeat">TTS Repeat</string>
	<string name="tts_repeat_summary">Continually repeat notifications over TTS until screen turns on</string>
	<string name="tts_repeat_dialog_msg">Notifications are repeated at the defined interval until the screen is turned on. Notifications created while the screen is on are not repeated.\n\nValue is in minutes. Blank or 0 to disable.</string>
</resources>